# womenhenku

./: .gitignore  11111.md  AGENT.md  AGENTS(2).md  AGENTS(3).md  AGENTS.md  AGENTS.md.bak  AGENTT.md  AGENTTT.md  AGENTTTT.md  INIT(2).md  INIT.md  PLAN(lxh).md  PLAN.md.bak  PLANNN.md  README.md  create_ppt_v2.py  create_prototype_pdf.py  cross-platform-analysis.md  lxhINIT.md  md_to_pdf.py  package-lock.json  release-v1.0.0.md  release-v2.0.0.md  test-subscriptions.opml  test_subscriptions.opml  v2-features-spec(1).md  v2-features-spec.md
.github/: PLAN(1).md
docs/: init-decision-log.md  key-decisions-summary.md
mercury-ui-preview/: .design  colors_and_type.css  validation-report.json
scripts/: install-windows.ps1
src-tauri/: Cargo.lock.bak  Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_opml_import.rs
src-tauri/icons/: icon.icns
src-tauri/resources/prompts/: summary.yaml  translation.yaml
src-tauri/src/: commands.rs  digest.rs  lib.rs  main.rs  notes.rs
src-tauri/src/agent/: client.rs  crypto.rs  mod.rs  prompt.rs  service.rs  state.rs  summary.rs  translation.rs
src-tauri/src/db/: error.rs  migration.rs  mod.rs  model.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_fts_search.sql  003_providers.sql  004_notes_digest.sql  005_tags.sql  006_tags_enhance.sql  007_llm_usage.sql  008_tag_schema_enhance.sql
src-tauri/src/db/repository/: agent_run_repo.rs  content_repo.rs  entry_repo.rs  feed_repo.rs  llm_usage_repo.rs  mod.rs  note_repo.rs  provider_repo.rs  tag_repo.rs
src-tauri/src/feed/: mod.rs  model.rs  opml.rs  parser.rs  service.rs
src-tauri/src/platform/: font.rs
src-tauri/src/reader/: mod.rs  pipeline.rs  service.rs
src-tauri/tests/fixtures/: article_basic.html  article_chinese.html  article_malicious.html  sample_atom.xml  sample_jsonfeed.json  sample_rss2.xml
src-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src-ui/src/: App.tsx  (+2 more)
womenhenku_INIT.md at dev · wkr-echo_womenhenku_files/: 10257-c70a83802097484a.js.下载  12540-1f3fb2182ee02089.js.下载  13505-5dee17bc5d3dd045.js.下载  1966-fbfbfc822eb8550d.js.下载  21265-6a76b64e3534ad57.js.下载  2338-fcdb711e6cfc788a.js.下载  24061-a1725d81ae017702.js.下载  26108-e8fcdef129b698b9.js.下载  26533-40828ca3a25cd387.js.下载  27600-0e4c25b9966aa15b.js.下载  27956-a7b1e1b86d206658.js.下载  2887-c6bbf6807b47f01c.js.下载  296-4c0a68ac3f1b71d1.js.下载  29863-ab3f485fdc17575f.js.下载  30058-00fdf1aae5a3d0d2.js.下载  3092-3835ccf9e736f8f3.js.下载  38566-18d0a37605b397b1.js.下载  40489-46b92de09ba59e60.js.下载  41328-58fd5c991cf22249.js.下载  (+60 more)
(+455 files in other folders)
