[package]
name = "womenhenku"
version = "0.2.0"
edition = "2021"
description = "Mercury cross-platform RSS reader clone"

[features]
default = ["tauri-runtime"]
tauri-runtime = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-dialog", "dep:tauri-plugin-shell", "dep:tauri-plugin-notification"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Tauri (optional — enable with --features tauri-runtime)
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }

# System browser
webbrowser = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls — no system OpenSSL required)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Feed parsing
feed-rs = "2"

# Content extraction pipeline
readability = "0.3"
scraper = "0.20"
comrak = "0.28"

# Utilities
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.36"

# SSE streaming
futures-util = "0.3"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[lib]
name = "womenhenku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
